# mesa-panthor

./: .travis.yml  configure.ac  meson.build  meson_options.txt
include/GL/internal/: dri_interface.h
src/: .clang-format  meson.build
src/compiler/: Makefile.sources
src/compiler/nir/: meson.build  nir.h  nir_divergence_analysis.c  nir_intrinsics.py  nir_lower_blend.c  nir_lower_blend.h  nir_lower_io.c  nir_opt_constant_channel.c  nir_opt_vectorize.c
src/egl/drivers/dri2/: egl_dri2.c  platform_android.c  platform_drm.c  platform_wayland.c  platform_x11.c
src/egl/main/: eglsurface.c
src/gallium/: meson.build
src/gallium/auxiliary/: meson.build
src/gallium/auxiliary/nir/: nir_lower_blend.h
src/gallium/auxiliary/pipe-loader/: pipe_loader_drm.c
src/gallium/auxiliary/target-helpers/: drm_helper.h  drm_helper_public.h  inline_sw_helper.h  sw_helper.h
src/gallium/auxiliary/util/: u_screen.c
src/gallium/docs/source/: screen.rst
src/gallium/drivers/: panfrost
src/gallium/drivers/panfrost/: astyle.sh  meson.build  nir_lower_blend.c  nir_lower_blend.h  pan_allocate.c  pan_assemble.c  pan_blend_shaders.c  pan_blend_shaders.h  pan_blending.c  pan_blending.h  pan_cmdstream.c  pan_context.c  pan_context.h  pan_format.c  pan_nondrm.c  pan_nondrm.h  pan_pretty_print.c  pan_pretty_print.h  pan_public.h  pan_resource.c  pan_resource.h  pan_screen.c  pan_screen.h  pan_slowfb.c  pan_slowfb.h  pan_swizzle.c  pan_swizzle.h  pan_texture.c  pan_texture.h  pan_wallpaper.c  panfrost_pipe.c  panfrost_public.h  panfrost_state.c  sp_context.c  sp_context.h  sp_flush.c  sp_public.h  sp_query.c  sp_screen.c  sp_screen.h  (+7 more)
src/gallium/drivers/panfrost/bifrost/: bifrost.h  bifrost_compile.c  bifrost_compile.h  cmdline.c  disassemble.c  disassemble.h  ir_defines.h  ir_printer.c  ir_printer.h
src/gallium/drivers/panfrost/include/: mali-int.h  mali-ioctl.h  mali-job.h  meson.build  panfrost-int.h  panfrost-ioctl.h  panfrost-job.h  panfrost-mali-base.h.meson.in  panfrost-misc.h
src/gallium/drivers/panfrost/midgard/: blend-constcolor-zero.asm  blend.frag  blendify.sh  cmdline.c  disassemble.c  disassemble.h  helpers.h  midgard-parse.h  midgard.h  midgard_cmdline.c  midgard_compile.c  midgard_compile.h  midgard_nir_algebraic.py
src/gallium/drivers/panfrost/panwrap/: meson.build  panwrap-decoder.c  panwrap-decoder.h  panwrap-mmap.c  panwrap-mmap.h  panwrap-syscall.c  panwrap-util.c  panwrap-util.h  panwrap.h
src/gallium/include/pipe/: p_defines.h
src/gallium/targets/dri/: meson.build  target.c
src/gallium/winsys/kmsro/drm/: kmsro_drm_winsys.c  meson.build
src/gallium/winsys/meson/drm/: meson_drm_winsys.c
src/gallium/winsys/panfrost/drm/: meson.build  panfrost_drm_public.h  panfrost_drm_winsys.c
src/gallium/winsys/rockchip/drm/: Android.mk  Makefile.am  meson.build  rockchip_drm_winsys.c
src/glx/: dri3_glx.c  drisw_glx.c
src/mesa/drivers/dri/i915/: intel_screen.c
src/mesa/drivers/dri/i965/: intel_screen.c
src/panfrost/: meson.build
src/panfrost/bifrost/: bi_lower_swizzle.c  bi_opt_copy_prop.c  bi_opt_cse.c  bi_opt_mod_props.c  bi_ra.c  bifrost_compile.c  bifrost_compile.h  bir.c  compiler.h
src/panfrost/lib/: pan_props.c  pan_scoreboard.c  pan_shader.c
src/panfrost/lib/genxml/: ceu_builder.h
src/panfrost/util/: pan_ir.h  pan_sysval.c
src/panfrost/vulkan/: .clang-format  meson.build  pan_android.c  pan_cmd_buffer.c  pan_descriptor_set.c  pan_descriptor_set.h  pan_device.c  pan_drm.c  pan_entrypoints_gen.py  pan_extensions.py  pan_fence.c  pan_formats.c  pan_icd.py  pan_image.c  pan_meta_blit.c  pan_meta_buffer.c  pan_meta_clear.c  pan_meta_copy.c  pan_meta_resolve.c  pan_pass.c  pan_pipeline.c  pan_pipeline_cache.c  pan_private.h  pan_query.c  pan_shader.c  pan_util.c  pan_util.h  pan_wsi.c  pan_wsi_wayland.c  panvk_cmd_buffer.c  panvk_cs.c  panvk_cs.h  panvk_descriptor_set.c  panvk_device.c  panvk_extensions.py  panvk_formats.c  panvk_icd.py  panvk_image.c  panvk_meta_blit.c  panvk_meta_buffer.c  (+10 more)
